<resources>
    <string name="app_name">Rateaurant</string>
    <string name="login_username">Username</string>
    <string name="login_password">Password</string>
    <string name="login_loginhint">Login</string>
    <string name="login_createaccounttext"><u>Create an Account</u></string>
    <string name="createaccount_namehint">Name</string>
    <string name="createaccount_password">Password (6&#8211;12 characters)</string>
    <string name="createaccount_confirmpassword">Confirm Password</string>
    <string name="createaccount_email">E-mail</string>
    <string name="createaccount_username">Username</string>
    <string name="createaccount_createtext">Create Account</string>
    <string name="restaurant_linkind">Or Online At:</string>
    <string name="restaurant_placeind">Find Them At:</string>

    <string-array name="editrestaurant_pricesigns">
        <item>$</item>
        <item>$$</item>
        <item>$$$</item>
        <item>$$$$</item>
        <item>$$$$$</item>
    </string-array>
</resources>
